# claude-plugin-kubernetes

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/k8s-health/: SKILL.md
.github/workflows/: publish.yml
k8s_mcp/: formatters.py  kubectl.py  prompts.py  resources.py  server.py
k8s_mcp/tools/: awareness.py  diagnostics.py  remediation.py
src/: kubectl.py  server.py
src/tools/: awareness.py  diagnostics.py  remediation.py
tests/: conftest.py
tests/integration/: conftest.py  test_awareness_live.py  test_diagnostics_live.py
tests/unit/: test_awareness.py  test_diagnostics.py  test_formatters.py  test_kubectl.py  test_remediation.py  test_ux_improvements.py
