[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-plugin-kubernetes"
version = "0.1.0"
description = "Claude MCP plugin for Kubernetes cluster awareness, diagnostics, and remediation"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "pyyaml>=6.0",
]

[project.scripts]
k8s-mcp = "src.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
