[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-plugin-kubernetes"
version = "0.2.0"
description = "Claude MCP plugin for Kubernetes cluster awareness, diagnostics, and remediation"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "pyyaml>=6.0",
]

[project.scripts]
k8s-mcp = "k8s_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: requires live minikube cluster"]

[tool.setuptools.packages.find]
where = ["."]
include = ["k8s_mcp*"]
